--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <img src="images/cat-codespace.png" alt="Image of me" />
       <p>
-        Hello! I'm CodeSpace Cat. I'm purr-ssionate about web development and
+        Hello! I'm <strong>CodeSpace Cat</strong>. I'm purr-ssionate about web development and
         design. I've been pawing at the web industry for just one catnap (that's
         less than a day in human terms), and I adore crafting pawsitively
         intuitive, whisker-twitching, and fur-tastic web experiences. Whoa
