--- a/index.html
+++ b/index.html
@@ -1,109 +1,305 @@
+<!-- Inspired by George Park: https://codepen.io/GeorgePark/pen/VXrwOP -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meow Awesome Portfolio Site 🚀</title>
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CodeSpace Pets Instagram 😺</title>
+    <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    
 
-  <body>
-    <!-- Header and Navigation -->
-    <header>
-      <h1>CodeSpace Cat's Portfolio 🎨</h1>
-      <nav>
-        <!-- Navigation Menu -->
-        <ul>
-          <li><a href="#about me section">About Me 👋</a></li>
-          <li><a href="#skills section">Skills ⚒️</a></li>
-          <li><a href="#portfolio section">Portfolio 📸</a></li>
-          <li><a href="#contact section">Contact 🤙</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <!-- About Me Section -->
-    <section id="about me section">
-      <h2>About Me 😺</h2>
 
-      <img src="images/cat-codespace.png" alt="Image of me" />
-      <p>
-        Hello! I'm <strong>CodeSpace Cat</strong>. I'm purr-ssionate about web development and
-        design. I've been pawing at the web industry for just one catnap (that's
-        less than a day in human terms), and I adore crafting pawsitively
-        intuitive, whisker-twitching, and fur-tastic web experiences. Whoa
-        that's a lot of puns. 🐾
-      </p>
-    </section>
+<header>
 
-    <!-- Skills Section -->
-    <section id="skills section">
-      <h2>My Skills 🤹</h2>
-      <ul>
-        <li>Web Developoment ❄️</li>
-        <li>UI/UX Design 🎨</li>
-        <li>Backend Developoment 🧱</li>
-        <li>Database Management 💻</li>
-        <li>SEO Optimization 🔎</li>
-        <li>Lying in the Sun 🌞</li>
-      </ul>
-    </section>
+	<div class="container">
 
-    <!-- Portfolio Section -->
-    <section id="portfolio section">
-      <h2>Catfolio</h2>
-      <table>
-        <thead>
-          <th><b>Project Name</b></th>
-          <th><b>Date</b></th>
-          <th><b>Description</b></th>
-          <th><b>Thumbnail</b></th>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Perfect Landing Page</td>
-            <td>January 2024</td>
-            <td>A delightful landing page for a cat condo.</td>
-            <td>
-              <img src="images/1.png" alt="Screenshot of the landing page" />
-            </td>
-          </tr>
-          <tr>
-            <td>Kitty Commerce</td>
-            <td>February 2024</td>
-            <td>An online store selling the fanciest catnip toys.</td>
-            <td>
-              <img src="images/2.png" alt="Screenshot of Kitty Commerce" />
-            </td>
-          </tr>
-          <tr>
-            <td>CatChat Social</td>
-            <td>June 2024</td>
-            <td>A social media site fir cats to meow and hiss!</td>
-            <td>
-              <img src="images/3.png" alt="Screenshot of Cat Social" />
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+		<div class="profile">
 
-    <!-- Contact Section -->
-    <section id="contact section">
-      <h2>Contact Me</h2>
-      <form action="/submit_form" method="post">
-        <label for="name">Name:</label>
-        <input type="name" />
-        <label for="email">Email:</label>
-        <input type="email" />
-        <label for="message">Message:</label>
-        <input type="message" />
-        <button>Submit</button>
-      </form>
-    </section>
+			<div class="profile-image">
 
-    <!-- Footer -->
-    <footer>
-      <p>&copy;2024 CodeSpace Cat. All rights reserved.</p>
-    </footer>
-  </body>
+				<img src="./images/cat-codespace.png" alt="">
+
+			</div>
+
+			<div class="profile-user-settings">
+
+				<h1 class="profile-user-name">codespace_pets</h1>
+
+				<button class="btn profile-edit-btn">Edit Profile</button>
+
+				<button class="btn profile-settings-btn" aria-label="profile settings"><i class="fa fa-cog" aria-hidden="true"></i></button>
+
+			</div>
+
+			<div class="profile-stats">
+
+				<ul>
+					<li><span class="profile-stat-count">549</span> posts</li>
+					<li><span class="profile-stat-count">45 682</span> followers</li>
+					<li><span class="profile-stat-count">1</span> following</li>
+				</ul>
+
+			</div>
+
+			<div class="profile-bio">
+
+				<p><span class="profile-real-name">CodeSpace Pets 😺</span> The hangout place for the best pets 🐕🐇🐦</p>
+
+			</div>
+
+		</div>
+		<!-- End of profile section -->
+
+	</div>
+	<!-- End of container -->
+
+</header>
+
+<main>
+
+	<div class="container">
+
+		<div class="gallery">
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/bailey.PNG" class="gallery-image" alt="">
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 56</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/startlett.jpg" class="gallery-image" alt="">
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 89</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/mr-chomsky.png" class="gallery-image" alt="">
+
+				<div class="gallery-item-type">
+
+					<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+
+				</div>
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 42</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/scarab.png" class="gallery-image" alt="">
+
+				<div class="gallery-item-type">
+
+					<span class="visually-hidden">Video</span><i class="fa fa-video" aria-hidden="true"></i>
+
+				</div>
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 38</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/baronnashor.png" class="gallery-image" alt="">
+
+				<div class="gallery-item-type">
+
+					<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+
+				</div>
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 47</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/gabrielle.jpg" class="gallery-image" alt="">
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 94</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 3</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/jarrod.jpg" class="gallery-image" alt="">
+
+				<div class="gallery-item-type">
+
+					<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+
+				</div>
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 52</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 4</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/mr_goose.jpg" class="gallery-image" alt="">
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 66</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/dog-codespace.png" class="gallery-image" alt="">
+
+				<div class="gallery-item-type">
+
+					<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+
+				</div>
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 45</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/forrest.jpg" class="gallery-image" alt="">
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 34</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/louise.jpg" class="gallery-image" alt="">
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 41</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="gallery-item" tabindex="0">
+
+				<img src="./images/tired.jpg" class="gallery-image" alt="">
+
+				<div class="gallery-item-type">
+
+					<span class="visually-hidden">Video</span><i class="fa fa-video" aria-hidden="true"></i>
+
+				</div>
+
+				<div class="gallery-item-info">
+
+					<ul>
+						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 30</li>
+						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
+					</ul>
+
+				</div>
+
+			</div>
+
+		</div>
+		<!-- End of gallery -->
+
+		<div class="loader"></div>
+
+	</div>
+	<!-- End of container -->
+
+</main>
+
+    
+</body>
 </html>
+
+
+
+
+
+
+
+
+
